<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.example.cicerone.LoginActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_app">

        <EditText
            android:id="@+id/email"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etUserEmail"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:textColor="#fff"
            android:textColorHint="#fff"

            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_email"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#fff">

        <EditText
            android:id="@+id/password"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etUserPassword"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:textColor="#fff"
            android:textColorHint="#fff" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/Reg2"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"

        android:text="@string/tvUserLogin"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Register"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"

        android:text="@string/Register2"
        android:textColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_app"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="50sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="220dp"
        android:layout_height="39dp"
        android:layout_marginBottom="19dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/ForgotPassword"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/Reg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_password"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/Reg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
