<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/ColoredHandleTheme">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/costraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="44dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/etUsername"
                android:src="@drawable/ic_image_profile"
                app:layout_constraintBottom_toTopOf="@+id/storico"
                app:layout_constraintEnd_toStartOf="@+id/nome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/nome"
                android:layout_width="188dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Welcome"
                android:textAlignment="center"
                android:textColor="@color/black_overlay"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toEndOf="@+id/profile"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/visualizzaProfilo"
                android:layout_width="189dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:textSize="17sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textAlignment="center"
                android:text="@string/viewProfile"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.58"
                app:layout_constraintStart_toEndOf="@+id/profile"
                app:layout_constraintTop_toBottomOf="@+id/nome" />

            <TextView
                android:id="@+id/storico"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/text_shape_1"
                android:drawableEnd="@drawable/ic_event_blue_35dp"
                android:gravity="center"
                android:text="@string/storico"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/feedback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile" />

            <TextView
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/text_view_shape"
                android:gravity="center"
                android:text="@string/feedback"
                android:textAlignment="center"
                android:textSize="17sp"
                android:drawableEnd="@drawable/ic_comment_black_35dp"
                app:layout_constraintBottom_toTopOf="@+id/valuta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storico" />

            <TextView
                android:id="@+id/valuta"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/text_view_shape"
                android:drawableEnd="@drawable/ic_attach_money_blue_35dp"
                android:gravity="center"
                android:text="@string/valuta"
                android:textAlignment="center"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feedback" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/text_view_shape"
                android:text="@string/logout"
                android:gravity="center"
                android:textSize="17sp"
                android:textAlignment="center"
                android:drawableEnd="@drawable/ic_exit_to_app_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valuta" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>



















