<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uniba.di.itps.ciceroneapp.auth.PasswordActivity"
    android:theme="@style/ColoredHandleTheme">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_resetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="332dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="134dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/etPassEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etUserEmail"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/ResetPass"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:layout_marginTop="35dp"
        android:text="@string/ResetPassword"
        android:background="@drawable/button_shape"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_resetPass" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="338dp"
        android:layout_height="62dp"
        android:layout_marginBottom="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/Description"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/layout_resetPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>

