<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/costraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/searchBox"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/search_shape"
        android:elevation="2dp"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:text="@string/search"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_shape"
        android:gravity="center"
        android:text="@string/Date"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBox" />

    <TextView
        android:id="@+id/category"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/search_shape"
        android:gravity="center"
        android:text="@string/category1"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/searchBox" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/attivitàRicercate"
        android:layout_width="395dp"
        android:layout_height="588dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />
</android.support.constraint.ConstraintLayout>